4.When user scroll down the page, on hover of the timeline, there is a gap in between the timeline box displayed and the pop-up displayed for the timeline fixed

--- a/css/layout-local.css
+++ b/css/layout-local.css
@@ -833,6 +833,9 @@ button.owl-prev:focus {
   border-top: 1px solid #E57200;
   font-size: 0.8em;
 }
+.timeline-contener {
+  z-index: 50 !important;
+}
 .timeline-content-section {
   padding: 0px 25px;
   width: 100%;
